# LodeDB

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md
benchmarks/ann_kmeans_build/: modal_bench.py
benchmarks/batched_retrieval/: README.md  diagrams.py  run.py
benchmarks/direct_gpu_sweep/: README.md  diagrams.py  direct_gpu_sweep.py  modal_bench.py
benchmarks/embedding_megakernel_spike/: README.md  modal_bench.py  run.py  spike_backends.py  spike_cuda.py  spike_measure.py  spike_roofline.py
benchmarks/filtered_batch/: README.md  filtered_batch.py  modal_bench.py
benchmarks/govreport_scale/: README.md  diagrams.py  modal_bench.py  turbovec_govreport_scale.py
benchmarks/gpu_fused_topk/: modal_rust_gpu_test.py
benchmarks/gpu_vanilla_vs_augmented/: README.md  diagrams.py  modal_bench.py  run_bench.py  turbovec_vva_bench.py  turbovec_vva_runner.py
benchmarks/graph_memory/: README.md  graph_memory_bench.py  modal_bench.py  temporal_bench.py
benchmarks/hybrid/: README.md  hybrid_recall.py  modal_bench.py  persist_bench.py
benchmarks/laptop/: README.md  diagrams.py  run.py
benchmarks/late_interaction/: README.md  run.py
benchmarks/memory_integrations/: README.md  bench_langchain.py  bench_llamaindex.py  bench_mem0.py  common.py  modal_bench.py  run.py
benchmarks/mps_vs_neon/: README.md  diagrams.py  run.py
benchmarks/multimodal_image/: README.md  run.py
benchmarks/native_migration/: __init__.py  baseline_engine.py  baseline_filters.py  baseline_hybrid.py  baseline_storage.py  baseline_wal.py  corpora.py  filter_planner_compare.py  run.py  rust_vs_python.py
benchmarks/openknowledge_embeddings/: README.md  bench_core.py  modal_bench.py  okchunk.py  test_bench_core.py  test_okchunk.py
benchmarks/trieve_vs_lodedb/: README.md  lodedb_bench.py  modal_bench.py  trieve_bench.py  trieve_modal.py
benchmarks/vector_search_native/: diagrams.py  modal_bench.py  vector_search_native.py
crates/lodedb-cloud-core/: Cargo.toml
crates/lodedb-cloud-core/src/: artifact_store.rs  blob_layout.rs  client_ops.rs  digest.rs  error.rs  generation_inventory.rs  lib.rs  local_artifact_store.rs  managed.rs  manifest_transfer.rs  object_artifact_store.rs  paths.rs  snapshot_identity.rs  status.rs  store_target.rs  sync_plan.rs  sync_state.rs  transfer_policy.rs  verify.rs
crates/lodedb-cloud-core/tests/: artifact_store.rs  client_ops.rs  generation_inventory.rs  managed.rs  manifest_transfer.rs  object_artifact_store.rs  restore.rs  snapshot_identity.rs  store_target.rs  sync_ops.rs  sync_plan.rs  sync_state.rs  verify_status.rs
crates/lodedb-cloud-core/tests/common/: mod.rs
crates/lodedb-core/: Cargo.toml
crates/lodedb-core/examples/: filter_planner_bench.rs  turbovec_adapter_smoke.rs  write_generation_fixture.rs  write_wal_fixture.rs
crates/lodedb-core/src/: error.rs  lib.rs  types.rs  version.rs
crates/lodedb-core/src/engine/: mod.rs
crates/lodedb-core/src/filter/: ast.rs  doc_set.rs  field_index.rs  mod.rs  predicate.rs  resolve.rs  validate.rs
crates/lodedb-core/src/lexical/: bm25.rs  mod.rs  rrf.rs  tokenize.rs
crates/lodedb-core/src/storage/: commit_manifest.rs  legacy.rs  lexical_store.rs  lsn.rs  mod.rs  multivec_store.rs  state_journal.rs  text_store.rs  tvann_store.rs  tvim_delta.rs  tvvf_store.rs  util.rs  wal.rs
crates/lodedb-core/src/text/: chunk.rs  hash.rs  mod.rs
crates/lodedb-core/src/vector/: ann.rs  index.rs  math.rs  mod.rs  stable_id.rs  turbovec.rs
crates/lodedb-core/tests/: ann_build_bench.rs  block_skip_layout.rs  core_engine.rs  filter_plan_fixtures.rs  identity_fixtures.rs  lexical_fixtures.rs  operator_observability.rs  predicate_fixtures.rs  storage_fixtures.rs  turbovec_adapter.rs
crates/lodedb-ffi/: Cargo.toml
crates/lodedb-ffi/include/: lodedb_core.h  module.modulemap
crates/lodedb-ffi/src/: graph.rs  lib.rs
crates/lodedb-ffi/tests/: abi_smoke.c  abi_smoke.rs
crates/lodedb-gpu/: Cargo.toml
crates/lodedb-gpu/src/: lib.rs
crates/lodedb-graph/: Cargo.toml  README.md
crates/lodedb-graph/src/: error.rs  graph.rs  index.rs  lib.rs  model.rs  search.rs  temporal.rs  topology.rs
crates/lodedb-graph/tests/: temporal_graph.rs
crates/lodedb-python/: Cargo.toml
crates/lodedb-python/src/: lib.rs
docs/: architecture.md  benchmarks.md  cloud-roadmap.md  deployment-and-performance.md  graph.md  install-agent.md  integrations.md  late-interaction.md  migrate-agent.md  multimodal.md  native_core_migration.md  native_core_wal_payloads.md  swift-agent-contract.md  swift-publishing.md  temporal-graph-design.html  temporal-graph.md
examples/: README.md  cognee_provider.py  kotaemon_store.py  langchain_store.py  llama_index_graph_store.py  llama_index_store.py  mcp_config.json  mem0_store.py  multimodal_clip.py  privategpt_provider.py  quickstart.py
tests/: conftest.py  test_ann_options.py  test_atomic_commit.py  test_cloud_agents_scaffold.py  test_cloud_cli.py  test_cloud_client_api.py  test_cloud_connect_targets.py  test_cloud_credentials.py  test_cloud_env_file.py  test_cloud_import_root.py  test_cloud_routing_hint.py  test_cloud_sealed_store.py  test_cloud_store_verbs.py  test_cloud_surface_parity.py  test_cloud_sync.py  test_cloud_target_dispatch.py  test_cloud_trampoline.py  test_cognee_adapter.py  test_commit_drift_deferral.py  test_direct_gpu_sweep.py  test_durability.py  test_durable_reindex.py  test_filelock.py  test_filter_plan.py  test_filtered_batch_allowlist.py  test_filtered_enumeration.py  test_gpu_patch.py  test_graph_bulk_load.py  test_graph_hybrid.py  test_graph_knowledge_graph.py  test_graph_temporal.py  test_import_boundary.py  test_in_process_concurrency.py  test_kotaemon_adapter.py  test_late_interaction.py  test_lexical.py  test_local_backends.py  test_local_cli_and_server.py  test_local_collection.py  test_local_custom_embedder.py  (+43 more)
(+255 files in other folders)
