[workspace]
members = [
  "crates/lodedb-core",
  "crates/lodedb-python",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
repository = "https://github.com/Egoist-Machines/LodeDB"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
