[workspace]
members = [
  "crates/lodedb-cloud-core",
  "crates/lodedb-core",
  "crates/lodedb-ffi",
  "crates/lodedb-gpu",
  "crates/lodedb-graph",
]
resolver = "2"

[workspace.package]
version = "2.0.1"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/Egoist-Machines/LodeDB"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
