[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "lodedb"
# Static (maturin reads it here); keep in sync with src/lodedb/__init__.py __version__.
version = "0.4.0"
description = "Local-first, privacy-by-default embedded vector database. Your data never leaves your machine."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Egoist Machines", email = "oss@egoistmachines.com" }]
keywords = [
  "vector-database",
  "embeddings",
  "local-first",
  "privacy",
  "semantic-search",
  "rag",
  "cuda",
  "gpu-acceleration",
  "turbovec",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Lean runtime set (see docs/architecture.md). The compact TurboVec CPU core +
# .tvim/.tvd persistence is the bundled `lodedb._turbovec` extension (compiled
# into the wheel, see [tool.maturin]), not a PyPI dependency. numpy = embedding/
# scan I/O; typer = CLI; pyyaml = loads the bundled route registry.
# Embedding runtime: onnxruntime is the default (faster feature extraction; the
# preset models ship a prebuilt ONNX on the Hub, fetched on first use) with
# transformers for tokenization; sentence-transformers (which pulls torch) is the
# fallback when ONNX cannot be set up. Exporting ONNX for a model without a prebuilt
# graph is the opt-in [onnx-export] extra (Optimum), not part of the base install.
# Heavy research deps (faiss/modal/mteb/datasets/matplotlib/sklearn) are
# deliberately NOT here and are guarded out by tests/test_import_boundary.py.
dependencies = [
  "numpy>=2.0.0",
  "typer>=0.12.0",
  "onnxruntime>=1.20.0",
  "transformers>=4.40.0",
  "sentence-transformers>=3.0.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
# Opt-in GPU-resident exact scan on CUDA hosts (gpu_turbovec); absent CUDA, LodeDB uses
# the CPU scan. cupy wheels are Linux/CUDA-only, so this resolves to nothing elsewhere.
gpu = ["cupy-cuda12x>=13.0.0; platform_system == 'Linux'"]
# Export an ONNX graph for a model that does not ship a prebuilt one on the Hub
# (the built-in minilm/bge presets do, so this is only needed for custom models).
# Optimum runs the export in a subprocess, so it never imports into the lodedb process.
onnx-export = ["optimum[exporters]>=1.23.0,<2.0.0"]
# Optional stdio MCP server so coding agents can use LodeDB as local memory.
mcp = ["mcp>=1.0.0"]
# Optional LangChain VectorStore adapter.
langchain = ["langchain-core>=0.3.0"]
# Optional LlamaIndex VectorStore adapter.
llama-index = ["llama-index-core>=0.11.0"]
# Optional mem0 vector-store adapter.
mem0 = ["mem0ai>=2.0.0"]
# Optional image + text (CLIP) embedding via the "clip" preset / add_image. The CLIP
# model runs on the existing sentence-transformers + torch stack (already in the base
# deps), so this adds only Pillow for decoding image files. Both are imported lazily,
# so a plain `import lodedb` pulls neither (guarded by tests/test_import_boundary.py).
image = ["pillow>=10.0.0"]
# ruff is pinned (not floored) so `ruff format`/`ruff check` are reproducible across
# contributors and CI — the formatter's output can change between ruff releases.
dev = ["pytest>=8.3.0", "ruff==0.15.17"]

[project.scripts]
lodedb = "lodedb.local.cli:main"

[project.urls]
Homepage = "https://github.com/Egoist-Machines/LodeDB"
Repository = "https://github.com/Egoist-Machines/LodeDB"
Issues = "https://github.com/Egoist-Machines/LodeDB/issues"
Changelog = "https://github.com/Egoist-Machines/LodeDB/blob/main/CHANGELOG.md"

[tool.uv]
package = true

[tool.maturin]
# Bundle the patched TurboVec (Rust) core into the lodedb wheel as the
# `lodedb._turbovec` extension: maturin compiles the vendored crate
# (third_party/turbovec — MIT core + Apache-2.0 local patches: encoded-row
# export/import, upsert_with_ids, calibration_fitted; see LICENSE + LOCAL_PATCHES.md)
# and ships the pure-Python lodedb package from src/. The extension is abi3, so
# one wheel covers all supported Python versions on a platform.
manifest-path = "third_party/turbovec/turbovec-python/Cargo.toml"
module-name = "lodedb._turbovec"
python-source = "src"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
# The vendored TurboVec crate (third_party/) is upstream MIT code, not ours to lint.
extend-exclude = ["third_party"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["lodedb"]
