[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "lodedb"
# Static (maturin reads it here); keep in sync with src/lodedb/__init__.py __version__.
version = "1.3.0"
description = "Local-first, privacy-by-default embedded vector database. Your data never leaves your machine."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Egoist Machines", email = "oss@egoistmachines.com" }]
keywords = [
  "vector-database",
  "embeddings",
  "local-first",
  "privacy",
  "semantic-search",
  "rag",
  "cuda",
  "gpu-acceleration",
  "turbovec",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Base runtime set (see docs/architecture.md): everything needed to run LodeDB as a vector
# store — bring-your-own-vectors (open_vector_store / add_vectors / search_by_vector) or a
# caller-supplied embedder= — with no embedding runtime. The compact TurboVec CPU core +
# .tvim/.tvd persistence is the bundled `lodedb._turbovec` extension (compiled into the wheel,
# see [tool.maturin]), not a PyPI dependency. numpy = embedding/scan I/O; typer = CLI;
# pyyaml = loads the bundled route registry.
# Built-in text embedding is the opt-in [embeddings] extra: onnxruntime (the default runtime;
# the preset models ship a prebuilt ONNX on the Hub, fetched on first use) + transformers (for
# tokenization). The [torch] extra adds sentence-transformers (which pulls torch) for the
# PyTorch fallback, the CLIP preset, and device="mps". All three are imported lazily (only when
# a preset/CLIP backend is built), so a plain `import lodedb` pulls none of them — guarded by
# tests/test_import_boundary.py, alongside the heavy research deps
# (faiss/modal/mteb/datasets/matplotlib/sklearn) that are deliberately never declared.
# The heavy numeric/ML deps are capped below the next major above the tested set in uv.lock (numpy
# 2.x, onnxruntime 1.x, transformers 4.x), so a future major cannot silently resolve into an install
# and change behavior or memory use. sentence-transformers is held at <5 (tighter than the
# tested-set rule): the 5.x line paired with transformers 5.x showed a large, silent embedding
# memory regression in the field (~67 GB vs ~21 GB for the same workload on 4.x; see
# docs/deployment-and-performance.md). Raise a cap once the new major is validated, then re-run uv lock.
dependencies = [
  "numpy>=2.0.0,<3",
  "typer>=0.12.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
# Built-in text embedding. onnxruntime is the default runtime (the minilm/bge presets ship a
# prebuilt ONNX on the Hub, fetched on first use); transformers provides the tokenizer. This is
# torch-free. Without it, LodeDB is a vector store: bring your own vectors (open_vector_store /
# add_vectors / search_by_vector) or pass embedder=. The preset path raises a clear install
# hint if a text model is requested without it.
embeddings = ["onnxruntime>=1.20.0,<2", "transformers>=4.40.0,<5"]
# PyTorch embedding tier: the sentence-transformers runtime used as the fallback when a model's
# ONNX graph is unavailable, by the CLIP preset, and by device="mps". Pulls torch. Combine with
# the ONNX default via lodedb[embeddings,torch].
torch = ["sentence-transformers>=3.0.0,<5"]
# Opt-in GPU-resident exact scan on CUDA hosts (gpu_turbovec); absent CUDA, LodeDB uses
# the CPU scan. cupy wheels are Linux/CUDA-only, so this resolves to nothing elsewhere.
gpu = ["cupy-cuda12x>=13.0.0; platform_system == 'Linux'"]
# Export an ONNX graph for a model that does not ship a prebuilt one on the Hub
# (the built-in minilm/bge presets do, so this is only needed for custom models).
# Optimum runs the export in a subprocess, so it never imports into the lodedb process.
onnx-export = ["optimum[exporters]>=1.23.0,<2.0.0"]
# Optional stdio MCP server so coding agents can use LodeDB as local memory.
mcp = ["mcp>=1.0.0"]
# Optional LangChain VectorStore adapter.
langchain = ["langchain-core>=0.3.0"]
# Optional LlamaIndex VectorStore adapter.
llama-index = ["llama-index-core>=0.11.0"]
# Optional mem0 vector-store adapter.
mem0 = ["mem0ai>=2.0.0"]
# Optional image + text (CLIP) embedding via the "clip" preset / add_image. CLIP runs on the
# sentence-transformers stack (the [torch] tier) and adds Pillow for decoding image files. Both
# are imported lazily, so a plain `import lodedb` pulls neither (tests/test_import_boundary.py).
image = ["pillow>=10.0.0", "lodedb[torch]"]
# Everything a user would reach for: built-in embedding (ONNX + PyTorch), image search, the MCP
# server, and the framework adapters. Excludes the niche [onnx-export]/[gpu] and the [dev] set.
all = ["lodedb[embeddings,torch,image,mcp,langchain,llama-index,mem0]"]
# ruff is pinned (not floored) so `ruff format`/`ruff check` are reproducible across
# contributors and CI — the formatter's output can change between ruff releases.
dev = ["pytest>=8.3.0", "ruff==0.15.17"]

[project.scripts]
lodedb = "lodedb.local.cli:main"

[project.urls]
Homepage = "https://github.com/Egoist-Machines/LodeDB"
Repository = "https://github.com/Egoist-Machines/LodeDB"
Issues = "https://github.com/Egoist-Machines/LodeDB/issues"
Changelog = "https://github.com/Egoist-Machines/LodeDB/blob/main/CHANGELOG.md"

[tool.uv]
package = true

[tool.maturin]
# Bundle the patched TurboVec (Rust) core into the lodedb wheel as the
# `lodedb._turbovec` extension: maturin compiles the vendored crate
# (third_party/turbovec — MIT core + Apache-2.0 local patches: encoded-row
# export/import, upsert_with_ids, calibration_fitted; see LICENSE + LOCAL_PATCHES.md)
# and ships the pure-Python lodedb package from src/. The extension is abi3, so
# one wheel covers all supported Python versions on a platform.
manifest-path = "third_party/turbovec/turbovec-python/Cargo.toml"
module-name = "lodedb._turbovec"
python-source = "src"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
# The vendored TurboVec crate (third_party/) is upstream MIT code, not ours to lint.
extend-exclude = ["third_party"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["lodedb"]
