[package]
name = "lodedb-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Rust core for LodeDB"

[lib]
name = "lodedb_core"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[lints]
workspace = true
