[package]
name = "lodedb-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Rust core for LodeDB"

[lib]
name = "lodedb_core"

[dependencies]
lodedb-gpu = { path = "../lodedb-gpu" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
turbovec = { path = "../../third_party/turbovec/turbovec" }
# Compresses the retained document-text base/segments (e.g. mem0 full payloads),
# which are otherwise stored as raw canonical JSON. The crate's public API is
# safe, so lodedb-core keeps unsafe_code = forbid.
zstd = "0.13"

# BSD advisory file locking for the shared single-writer lock; the same
# mechanism the Python writer uses (fcntl.flock). rustix exposes a safe flock,
# so the crate keeps unsafe_code = forbid. Unix targets only.
[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs"] }

[lints]
workspace = true
