[package]
name = "lodedb-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C ABI for the native LodeDB core"

[lib]
name = "lodedb_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
lodedb-core = { path = "../lodedb-core" }
serde = "1.0"
serde_json = "1.0"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"
