[package]
name = "lodedb-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C ABI for the native LodeDB core"

[lib]
name = "lodedb_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
lodedb-core = { path = "../lodedb-core" }
# The bi-temporal knowledge graph, exposed on-device via the `lodedb_graph_*` C ABI
# (see src/graph.rs) → the Swift `LodeGraph`.
lodedb-graph = { path = "../lodedb-graph" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"
