[package]
name = "lodedb-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Hidden Python bindings for the native LodeDB core"

[lib]
name = "_native_core"
crate-type = ["cdylib", "rlib"]
test = false

[dependencies]
lodedb-core = { path = "../lodedb-core" }
pyo3 = { version = "0.27.0", features = ["extension-module", "abi3-py39"] }
serde = "1.0"
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "0.27.0"

[lints]
workspace = true
